deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
    tier: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: quay.io/arief_amarullah/hello-world:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
