deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  namespace: hello-world
spec:
  path: /
  to:
    kind: Service
    name: hello-world
  port:
    targetPort: 9000
